setting and room

--- a/src/app/app-rooms/components/room/room.component.html
+++ b/src/app/app-rooms/components/room/room.component.html
@@ -5,8 +5,8 @@
     <div actionPanel>
         <button mat-raised-button color="primary" (click)="addRoomModal()">Add room</button>
     </div>
-    <div body>
-      nothing room
+    <div body class="full-width">
+      <app-roomlist></app-roomlist>
     </div>
   </page-wrapper>
   
