--- a/src/app/app-rooms/modal/add-room/add-room.component.html
+++ b/src/app/app-rooms/modal/add-room/add-room.component.html
@@ -21,7 +21,7 @@
         </form>
     </div>
     <div secondaryContent>
-        <button mat-stroked-button color="primary" (click)="close()">Cancel</button>
+        <button mat-stroked-button color="primary" type="button" (click)="close()">Cancel</button>
     </div>
     <button primaryButton mat-raised-button color="primary" type="submit" form="roomForm">Save</button>
 </modal-wrapper>
