--- a/src/app/app-dashboard/components/home/home.component.html
+++ b/src/app/app-dashboard/components/home/home.component.html
@@ -2,7 +2,7 @@
   <div pageTitle>
     Dashboard
   </div>
-  <div body>
-    nothing
+  <div body class="full-width">
+    <app-bookings></app-bookings>
   </div>
 </page-wrapper>
