--- a/src/app/app-rooms/modal/add-room/add-room.component.html
+++ b/src/app/app-rooms/modal/add-room/add-room.component.html
@@ -1,6 +1,6 @@
 <modal-wrapper>
     <div headerText class="header-title">
-        Add room
+        {{headerTitle}}
     </div>
     <div modalBody>
         <form [formGroup]="roomForm" fxLayout="column" id="roomForm" (ngSubmit)="onSubmit()">
